[package]
name = "resolution"
version = "0.1.0"
edition = "2021"

[dependencies.serde]
version = "1.0.136"
features = ["derive"]
optional = true

[dependencies.chrono]
version = "0.4.24"
default-features = false
features = ["std"]


[dev-dependencies]
serde_json = "1.0.81"
chrono-tz = "0.8.0"

[features]
with_serde = ["serde","chrono/serde"]