[package]
name = "resolution"
version = "0.1.0"
edition = "2021"

[dependencies.serde]
version = "1.0.197"
features = ["derive"]
optional = true

[dependencies.chrono]
version = "0.4.37"
default-features = false

[dev-dependencies.chrono-tz]
version = "0.9.0"
default-features = false

[dev-dependencies]
serde_json = "1.0.115"

[features]
serde = ["dep:serde","chrono/serde"]
std = ["chrono/std"]